# PointlessWars

./: .gitignore  CPB-example-win.cbp  EULA.txt  README.md  README.txt  design.txt  release-check-list.txt  test
00-Unix/: .CMakeLists.txt.swp  CMakeLists.txt  ProjectEditor.py  config.xml  imgui.ini  pw-debug
00-Windows/: Pointless Wars.cbp  Pointless Wars.depend  Pointless Wars.layout  config.xml  rsc.rc
building-examples/: CMakeLists-example-win.txt
code/: AISystem.cpp  AISystem.h  ActionOutcome.cpp  ActionOutcome.h  ActionSystem.cpp  ActionSystem.h  AnchorSystem.cpp  AnchorSystem.h  AnimationSystem.cpp  AnimationSystem.h  AnnouncerSystem.cpp  AnnouncerSystem.h  ArmyHUDSystem.cpp  ArmyHUDSystem.h  ArmySystem.cpp  ArmySystem.h  Assets.cpp  Assets.h  AutoPilotSystem.cpp  AutoPilotSystem.h  ButtonSystem.cpp  ButtonSystem.h  CMDLineSystem.cpp  CMDLineSystem.h  CameraSystem.cpp  CameraSystem.h  CommandListener.cpp  CommandListener.h  Component.cpp  Component.h  Config.cpp  Config.h  CursorSystem.cpp  CursorSystem.h  CustomMatchSystem.cpp  CustomMatchSystem.h  DebugServices.cpp  DebugServices.h  DisplayerSystem.cpp  DisplayerSystem.h  (+88 more)
include/: .Component.h.swp  AISystem.h  ActionOutcome.h  ActionSystem.h  AnchorSystem.h  AnimationSystem.h  AnnouncerSystem.h  ArmyHUDSystem.h  ArmySystem.h  Assets.h  ButtonSystem.h  CommandListener.h  Component.h  Config.h  DebugServices.h  DisplayerSystem.h  DragDropSystem.h  ElipsoidalMovementSystem.h  EntitiesManager.h  Entity.h  FadeSystem.h  FormationEditor.h  GUIGroupSystem.h  Game.h  MainMenuSystem.h  MatchConfig.h  Messages.h  NetworkSystem.h  OSAppDataDir.h  PanelSystem.h  ParticleSystem.h  PathSystem.h  PlayerSystem.h  RemotePlayer.h  RenderSystem.h  ScenarioSystem.h  ScreenSystem.h  ScriptedAnimation.h  SideUISystem.h  SliderSystem.h  (+14 more)
projects/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Pointless Wars.cbp  Pointless Wars.depend  Pointless Wars.layout  install_manifest_Animations.txt  install_manifest_Game.txt  install_manifest_Languages.txt  install_manifest_Objects.txt  install_manifest_Resources.txt  install_manifest_Sceneries.txt
projects/PW-netbeans/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  configurations.xml
projects/PW-netbeans/nbproject/private/: private.xml
projects/_CPack_Packages/win32/NSIS/: NSIS.InstallOptions.ini  project.nsi
projects/_CPack_Packages/win32/NSIS/PW-setup-alpha-win32/Sceneries/rsc/sceneries/: beach.sce  desert.sce  town-west.sce
rsc/: .gitignore  formations.xml  match-config.xml  profiles.xml  scripted-match.json  strings-en.json  strings-en.xml
rsc/chars/: chars.xml
rsc/images/: lesson-1.pdn  lesson-2.pdn  lesson-3.pdn  lesson-4.pdn  lesson-5.pdn  lesson-6.pdn  scroll.pdn  victory-idea-2.pdn  victory-idea-3.pdn  victory-idea.pdn
rsc/images/icons/: banner-150-57.pdn
rsc/images/misc/: coin.pdn
rsc/images/sceneries/: cenario_agricultura.bg  cenario_bosque.bg  cenario_deserto.bg  cenario_neve.bg  scene-1.bg  scene-2.bg
rsc/images/sceneries/new-ones/: cenario_praia.bg
rsc/lan/: strings-en.json
rsc/misc/: P.pdn  bg.pdn  button.pdn  coin.pdn  element-icon.pdn  field-1.pdn  generic-unit.pdn  grid-32-32.pdn  hero-portrait.pdn  hero-tooltip-idea.pdn  hud-frame.pdn  intimidation-ui.pdn  main-title.pdn  polygon-frame.pdn  rsc.xlsx  scenario-guidelines.pdn  title-2.pdn  title.pdn  unit-counter.pdn  unit-icon-frame.pdn  unit-tooltip.pdn
rsc/sceneries/: beach.sce  bosque.sce  country.sce  desert.sce  scenario-00.sce  scenario-01.sce  scenario-02.sce  scenario-03.sce  scenario-04.sce  scenario-05.sce  scenario-06.sce  scenario-07.sce  snow.sce  temp.sce  teste.sce  teste2.sce  town-east.sce  town-west.sce  woods.sce
rsc/site/: banner2-1500-500.pdn
rsc/temp/: tarot-card.pdn
src/: .GUIGroupSystem.cpp.swp  .ScreenSystem.cpp.swp  AISystem.cpp  ActionSystem.cpp  AnchorSystem.cpp  AnimationSystem.cpp  AnnouncerSystem.cpp  ArmyHUDSystem.cpp  ArmySystem.cpp  Assets.cpp  ButtonSystem.cpp  CMDLineSystem.cpp  CameraSystem.cpp  CommandListener.cpp  Config.cpp  CursorSystem.cpp  CustomMatchSystem.cpp  DebugServices.cpp  DisplayerSystem.cpp  DropListSystem.cpp  EditorSystem.cpp  EntitiesManager.cpp  Entity.cpp  EventListenerSysrem.cpp  FadeSystem.cpp  FormationEditor.cpp  GUIGroupSystem.cpp  Game.cpp  InGameMenu.cpp  InputTextBoxSystem.cpp  MainMenuSystem.cpp  MasterSystem.cpp  MatchConfig.cpp  NetworkSystem.cpp  OSAppDataDir.cpp  OptionBoxSystem.cpp  PanelSystem.cpp  ParticleSystem.cpp  RemotePlayer.cpp  RenderSystem.cpp  (+16 more)
win32/: icon-win32.rc
