project(PointlessWars)
#=========================
# GLOBAL COMPILER OPTIONS
#=========================
add_compile_options(-Wall -std=c++0x)
link_directories(~/Libs/SFML-2.4.0/lib)
link_directories(~/Libs/boost_1_60_0/bin.v2/libs/filesystem/build/gcc-5.4.0/release/link-static/threading-multi)
link_directories(~/Libs/boost_1_60_0/bin.v2/libs/system/build/gcc-5.4.0/release/link-static/threading-multi)
include_directories(${PROJECT_SOURCE_DIR}/../include)
include_directories(~/Libs/boost_1_60_0)
include_directories(~/Libs/SFML-2.4.0/include)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
#=========================
# TARGET SPECIFIC OPTIONS
#=========================
add_executable (pw-release
    ../src/main.cpp
	../src/AISystem.cpp 
    ../src/ActionOutcome.cpp 
    ../src/ActionSystem.cpp 
    ../src/AnchorSystem.cpp 
    ../src/AnimationSystem.cpp 
    ../src/AnnouncerSystem.cpp 
    ../src/ArmyHUDSystem.cpp 
    ../src/ArmySystem.cpp 
    ../src/Assets.cpp 
    ../src/AutoPilotSystem.cpp 
    ../src/ButtonSystem.cpp 
    ../src/CMDLineSystem.cpp 
    ../src/CameraSystem.cpp 
    ../src/CommandListener.cpp 
    ../src/Component.cpp
    ../src/Config.cpp 
    ../src/CursorSystem.cpp 
    ../src/CustomMatchSystem.cpp 
    ../src/DisplayerSystem.cpp 
    ../src/DragDropSystem.cpp 
    ../src/DropListSystem.cpp 
    ../src/EditorSystem.cpp 
    ../src/ElipsoidalMovementSystem.cpp 
    ../src/EntitiesManager.cpp 
    ../src/Entity.cpp 
    ../src/FadeSystem.cpp 
    ../src/FormationEditor.cpp 
    ../src/Game.cpp 
    ../src/InGameMenu.cpp 
    ../src/InputTextBoxSystem.cpp 
    ../src/MainMenuSystem.cpp 
    ../src/MatchConfig.cpp 
    ../src/NetworkSystem.cpp 
    ../src/OptionBoxSystem.cpp 
    ../src/PanelSystem.cpp 
    ../src/ParticleSystem.cpp 
    ../src/PathSystem.cpp 
    ../src/RemotePlayer.cpp 
    ../src/RenderSystem.cpp 
    ../src/ScenarioSystem.cpp 
    ../src/ScreenSystem.cpp 
    ../src/ScriptedAnimation.cpp 
    ../src/ScrollListSystem.cpp 
    ../src/SideUISystem.cpp 
    ../src/SliderSystem.cpp 
    ../src/SoundSystem.cpp 
    ../src/SpinButtonSystem.cpp 
    ../src/Standard.cpp
    ../src/System.cpp 
    ../src/TextboxSystem.cpp 
    ../src/TimerSystem.cpp 
    ../src/TooltipSystem.cpp 
    ../src/UnitSystem.cpp 
    ../src/War.cpp 
    ../src/WarSystem.cpp 
    ../src/imgui.cpp 
    ../src/imgui_SFML.cpp 
    ../src/imgui_draw.cpp 
    ../src/tinyxml2.cpp 
)
add_executable (pw-debug 
    ../src/main.cpp
	../src/AISystem.cpp 
    ../src/ActionOutcome.cpp 
    ../src/ActionSystem.cpp 
    ../src/AnchorSystem.cpp 
    ../src/AnimationSystem.cpp 
    ../src/AnnouncerSystem.cpp 
    ../src/ArmyHUDSystem.cpp 
    ../src/ArmySystem.cpp 
    ../src/Assets.cpp 
    ../src/AutoPilotSystem.cpp 
    ../src/ButtonSystem.cpp 
    ../src/CMDLineSystem.cpp 
    ../src/CameraSystem.cpp 
    ../src/CommandListener.cpp 
    ../src/Component.cpp
    ../src/Config.cpp 
    ../src/CursorSystem.cpp 
    ../src/CustomMatchSystem.cpp 
    ../src/DisplayerSystem.cpp 
    ../src/DragDropSystem.cpp 
    ../src/DropListSystem.cpp 
    ../src/EditorSystem.cpp 
    ../src/ElipsoidalMovementSystem.cpp 
    ../src/EntitiesManager.cpp 
    ../src/Entity.cpp 
    ../src/FadeSystem.cpp 
    ../src/FormationEditor.cpp 
    ../src/Game.cpp 
    ../src/InGameMenu.cpp 
    ../src/InputTextBoxSystem.cpp 
    ../src/MainMenuSystem.cpp 
    ../src/MatchConfig.cpp 
    ../src/NetworkSystem.cpp 
    ../src/OptionBoxSystem.cpp 
    ../src/PanelSystem.cpp 
    ../src/ParticleSystem.cpp 
    ../src/PathSystem.cpp 
    ../src/RemotePlayer.cpp 
    ../src/RenderSystem.cpp 
    ../src/ScenarioSystem.cpp 
    ../src/ScreenSystem.cpp 
    ../src/ScriptedAnimation.cpp 
    ../src/ScrollListSystem.cpp 
    ../src/SideUISystem.cpp 
    ../src/SliderSystem.cpp 
    ../src/SoundSystem.cpp 
    ../src/SpinButtonSystem.cpp 
    ../src/Standard.cpp
    ../src/System.cpp 
    ../src/TextboxSystem.cpp 
    ../src/TimerSystem.cpp 
    ../src/TooltipSystem.cpp
    ../src/UnitSystem.cpp 
    ../src/War.cpp 
    ../src/WarSystem.cpp 
    ../src/imgui.cpp 
    ../src/imgui_SFML.cpp 
    ../src/imgui_draw.cpp 
    ../src/tinyxml2.cpp 
)
target_link_libraries(pw-release
    GL
    sfml-graphics
    sfml-window
    sfml-system
    sfml-audio
    sfml-network 
    pthread
    boost_system
    boost_filesystem
)
target_link_libraries(pw-debug
    GL
    sfml-graphics-d
    sfml-window-d
    sfml-system-d
    sfml-audio-d
    sfml-network-d 
    pthread
    boost_system
    boost_filesystem
)
target_compile_options(pw-release PRIVATE -g)
target_compile_options(pw-debug PRIVATE -O2)
set_target_properties(pw-release pw-debug
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../00-Unix 
)
